# models/user.js
@@ -1,21 +1,9 @@
 import mongoose from 'mongoose';
 
 const userSchema = mongoose.Schema({
-    username: {
-        type: String
-    },
-    password: {
-        type: String
-    },
-    email: {
-        type: String
-    },
-    name: {
-        type: String
-    },
-    createdAt: {
-        type: Date,
-        default: Date.now
+    userSub: {
+        type: String, 
+        unique: true
     }
 });
 
